connect images functionality is complete

--- a/public/assets.html
+++ b/public/assets.html
@@ -170,7 +170,7 @@
 		<section role="region">
 			<div id="assetoverlay">
 				<div class="uploadAsset" id="connectAssetForm">
-					<form>
+					<form class="connect-image-form">
 						<ul class="flex-outer">
 							<p class="form-title">Connect File</p>
 							<li>
