--- a/public/assets.html
+++ b/public/assets.html
@@ -21,6 +21,7 @@
 				<a id ="navAccountName" onclick="newAccountOn()" href="javascript:void(0)" class="dropbtn" href="#account">Account <i class="fas fa-user"></i></a>
 					<div class="dropdown-content">
 						<a onclick="loginOn()" href="javascript:void(0)"><i class="fas fa-sign-in-alt"></i> Login</a>
+						<a onclick="logoffOn()" href="javascript:void(0)"><i class="fas fa-sign-out-alt"></i> Logoff</a>
 						<a onclick="updateAccountOn()" href="javascript:void(0)"><i class="fas fa-edit"></i> Edit Account</a>
 						<a onclick="accountOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> Create Account</a>
 						<a onclick="deleteOn()" href="javascript:void(0)"><i class="fas fa-trash"></i> Delete Account</a>
@@ -61,8 +62,8 @@
 						<ul class="flex-outer">
 							<p class="form-title">Login</p>
 							<li>
-								<label for="user-name">Username</label>
-								<input type="text" id="user-name" placeholder="Enter username">
+								<label for="login-user-name">Username</label>
+								<input type="text" id="login-user-name" placeholder="Enter username">
 							</li>
 							<li>
 								<label for="password">Password</label>
@@ -77,18 +78,27 @@
 			</div>
 		</section>
 		<section role="region">
+			<div id="logoffoverlay">
+				<div class="logoff" id="logoffForm">
+					<form class="logoff-form">
+						<ul class="flex-outer">
+							<li>
+								<button id="logoff-overlaybutton" type="submit" onclick="logoffOff()">Logoff</button>
+							</li>
+						</ul>
+					</form>
+				</div>
+			</div>
+		</section>
+		<section role="region">
 			<div id="update-accountoverlay">
 				<div class="updateAccount" id="updateAccountForm">
 					<form class="update-account-form">
 						<ul class="flex-outer">
 							<p class="form-title">Update Account Information</p>
 							<li>
-								<label for="user-name">Username</label>
+								<label for="new-user-name">Username</label>
 								<input type="text" id="new-user-name" placeholder="Enter desired username">
-							</li>
-							<li>
-								<label for="password">Password</label>
-								<input type="text" id="new-password" placeholder="min 10 characters, letters and numbers">
 							</li>
 							<li>
 								<label for="first-name">First Name</label>
@@ -202,6 +212,40 @@
 			</div>
 		</section>
 		<section role="region">
+			<div id="edit-assetoverlay">
+				<div class="uploadAsset" id="editAssetForm">
+					<form class="update-image-form">
+						<ul class="flex-outer">
+							<p class="form-title">Update Image Information</p>
+							<li>
+								<label for="title">Title</label>
+								<input type="text" id="title" placeholder="Title">
+							</li>
+							<li>
+								<label for="date-uploaded">Today's Date</label>
+								<input type="text" id="date-uploaded" placeholder="mm/dd/yyyy">
+							</li>
+							<li>
+								<label for="notes">Notes</label>
+								<input type="text" id="notes" placeholder="Notes">
+							</li>
+							<li>
+								<label for="drawer-title">Add To Drawer</label>
+								<input type="text" id="drawer-title" class="drawer-title" placeholder="Enter existing or new drawer name">
+							</li>
+							<li>
+								<label for="image-url">Image URL</label>
+								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
+							</li>
+							<li>
+							<button id="updateimageoverlaybutton" type="submit" onclick="editAssetOff()">Update</button>
+							</li>
+						</ul>
+					</form>
+				</div>
+			</div>
+		</section>
+		<section role="region">
 			<div id="deleteoverlay">
 				<div class="delete" id="deleteForm">
 					<form>
@@ -217,25 +261,7 @@
 					</form>
 				</div>
 			</div>
-		</section>
-		<section role="region">
-			<div id="draweroverlay">
-				<div class="addDrawer" id="addDrawerForm">
-					<form class="drawer-age-form">
-						<ul class="flex-outer">
-							<p class="form-title">Create Drawer</p>
-							<li>
-							<label for="drawer-name">Drawer Name</label>
-							<input type="text" id="new-drawer-title" class="new-drawer-title" placeholder="Drawer Name">
-							</li>
-							<li>
-							<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
-							</li>
-						</ul>
-					</form>
-				</div>
-			</div>
-		</section>
+		</section>	
 		<main role="main">
 			<div class="tab dropdown-asset"></div>
 			<div id="assetDropdown" class="dropdown-editAsset"></div>
