added logoff, fixed adding one child profile twice

--- a/public/assets.html
+++ b/public/assets.html
@@ -128,7 +128,7 @@
 							<p class="form-title">Create New Account</p>
 							<li>
 								<label for="user-name">Username</label>
-								<input type="text" id="user-name" placeholder="Enter desired username">
+								<input type="text" id="new-user-name" placeholder="Enter desired username">
 							</li>
 							<li>
 								<label for="password">Password</label>
