--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 		<section role="region">
 			<div id="logoffoverlay">
 				<div class="logoff" id="logoffForm">
-					<form>
+					<form class="logoff-form">
 						<ul class="flex-outer">
 							<li>
 								<button id="logoff-overlaybutton" type="submit" onclick="logoffOff()">Logoff</button>
@@ -116,7 +116,7 @@
 							<p class="form-title">Create New Account</p>
 							<li>
 								<label for="user-name">Username</label>
-								<input type="text" id="user-name" placeholder="Enter desired username">
+								<input type="text" id="new-user-name" placeholder="Enter desired username">
 							</li>
 							<li>
 								<label for="password">Password</label>
