--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -94,7 +94,7 @@
 		<section role="region">
 			<div id="logoffoverlay">
 				<div class="logoff" id="logoffForm">
-					<form>
+					<form class="logoff-form">
 						<ul class="flex-outer">
 							<p class="form-title">Logoff</p>
 							<li>
@@ -143,7 +143,7 @@
 							<p class="form-title">Create New Account</p>
 							<li>
 								<label for="user-name">Username</label>
-								<input type="text" id="user-name" placeholder="Enter desired username">
+								<input type="text" id="new-user-name" placeholder="Enter desired username">
 							</li>
 							<li>
 								<label for="password">Password</label>
