added DELETE account functionality

--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -56,7 +56,7 @@
 		<section role="region">
 			<div id="deleteoverlay">
 				<div class="delete" id="deleteForm">
-					<form>
+					<form class="delete-form">
 						<ul class="flex-outer">
 							<p class="form-title">Are you sure?</p>
 							<li>
