updated tests for protected endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -228,35 +228,17 @@
 				</div>
 			</div>
 		</section>
-		<section role="region">
-			<div id="draweroverlay">
-				<div class="addDrawer" id="addDrawerForm">
-					<form class="drawer-age-form">
-						<ul class="flex-outer">
-							<p class="form-title">Create Drawer</p>
-							<li>
-							<label for="drawer-name">Drawer Name</label>
-							<input type="text" id="new-drawer-title" class="new-drawer-title" placeholder="Drawer Name">
-							</li>
-							<li>
-							<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
-							</li>
-						</ul>
-					</form>
-				</div>
-			</div>
-		</section>
 		<div id="body">
 			<main role="main">
 				<section role="region">
 					<div class="container">
 						<div class="grid">
-							<div class="cell"><img src="http://image.ibb.co/mrmVQJ/fox.jpg" class="responsive-image" alt="fox" border="0" size="500x400"></div>
-							<div class="cell"><img src="https://image.ibb.co/iXGTRm/lavendar.jpg" class="responsive-image" alt="lavendar" border="0" size="500x400"></div>
-							<div class="cell"><img src="https://image.ibb.co/cFzs5J/frog.jpg" alt="frog" class="responsive-image" border="0" size="500x400"></div>
-							<div class="cell"><img src="https://image.ibb.co/m8PTCy/antelopecanyon.jpg" alt="antelopecanyon" class="responsive-image" border="0" size="500x400"></div>
-							<div class="cell"><img src="https://image.ibb.co/cyVUKd/orchids.jpg" alt="orchids" class="responsive-image" border="0" size="500x400"></div>
-							<div class="cell"><img src="https://image.ibb.co/nHCFsy/bwca.jpg" alt="bwca" class="responsive-image" border="0" size="500x400"></div>
+							<div class="cell"><img src="https://image.ibb.co/mzfgey/IMG_7289.jpg" class="responsive-image" alt="spin-art" border="0" size="500x400"></div>
+							<div class="cell"><img src="https://image.ibb.co/hH3OsJ/IMG_7686.jpg" class="responsive-image" alt="hat" border="0" size="500x400"></div>
+							<div class="cell"><img src="https://image.ibb.co/dHAsmd/IMG_7320.jpg" alt="sparklers" class="responsive-image" border="0" size="500x400"></div>
+							<div class="cell"><img src="https://image.ibb.co/iYO9zy/IMG_1201_2.jpg" alt="climbing" class="responsive-image" border="0" size="500x400"></div>
+							<div class="cell"><img src="https://image.ibb.co/e0S56d/IMG_3312.jpg" alt="hugs" class="responsive-image" border="0" size="500x400"></div>
+							<div class="cell"><img src="https://image.ibb.co/jqQEzy/IMG_7706.jpg" alt="soccer" class="responsive-image" border="0" size="500x400"></div>
 						</div>
 					</div>
 				</section>
