--- a/public/assets.html
+++ b/public/assets.html
@@ -56,7 +56,7 @@
 			</header>
 		</div>	
 		<section role="region">
-			<div id="loginoverlay">
+			<div id="loginoverlay" onclick="loginOff()">
 				<div class="loginHere" id="loginForm">
 					<form class="login-form">
 						<ul class="flex-outer">
@@ -70,7 +70,7 @@
 								<input type="text" id="password2" placeholder="Enter password">
 							</li>
 							<li>
-								<button id="login" type="submit" onclick="loginOff()">Login</button>
+								<button id="login" type="submit">Login</button>
 							</li>
 						</ul>
 					</form>
@@ -78,12 +78,12 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="logoffoverlay">
+			<div id="logoffoverlay" onclick="logoffOff()">
 				<div class="logoff" id="logoffForm">
 					<form class="logoff-form">
 						<ul class="flex-outer">
 							<li>
-								<button id="logoff-overlaybutton" type="submit" onclick="logoffOff()">Logoff</button>
+								<button id="logoff-overlaybutton" type="submit">Logoff</button>
 							</li>
 						</ul>
 					</form>
@@ -91,7 +91,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="update-accountoverlay">
+			<div id="update-accountoverlay" onclick="updateAccountOff()">
 				<div class="updateAccount" id="updateAccountForm">
 					<form class="update-account-form">
 						<ul class="flex-outer">
@@ -113,7 +113,7 @@
 								<input type="text" class="email" id="updated-email" placeholder="Enter email here">
 							</li>
 							<li>
-								<button id="update-accountoverlaybutton" type="submit" onclick="updateAccountOff()">Update Account</button>
+								<button id="update-accountoverlaybutton" type="submit">Update Account</button>
 							</li>
 						</ul>
 					</form>
@@ -121,7 +121,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="accountoverlay">
+			<div id="accountoverlay" onclick="accountOff()">
 				<div class="addAccount" id="addAccountForm">
 					<form class="account-form">
 						<ul class="flex-outer">
@@ -148,7 +148,7 @@
 								<input type="text" class="email" id="account-email" placeholder="Enter email here">
 							</li>
 							<li>
-								<button id="accountoverlaybutton" type="submit" onclick="accountOff()">Create Account</button>
+								<button id="accountoverlaybutton" type="submit">Create Account</button>
 							</li>
 						</ul>
 					</form>
@@ -156,7 +156,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="childoverlay">
+			<div id="childoverlay" onclick="childOff()">
 				<div class="addChild" id="addChildForm">
 					<form class="child-age-form">
 						<ul class="flex-outer">
@@ -170,7 +170,7 @@
 							<input type="text" class="child-birth-date" id="birth-date" placeholder="mm/dd/yyyy">
 							</li>
 							<li>
-							<button id="childoverlaybutton" type="submit" onclick="childOff()">Create</button>
+							<button id="childoverlaybutton" type="submit">Create</button>
 							</li>
 						</ul>
 					</form>
@@ -178,7 +178,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="assetoverlay">
+			<div id="assetoverlay" onclick="assetOff()">
 				<div class="uploadAsset" id="connectAssetForm">
 					<form class="connect-image-form">
 						<ul class="flex-outer">
@@ -204,7 +204,7 @@
 								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
 							</li>
 							<li>
-							<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Publish</button>
+							<button id="assetoverlaybutton" type="submit">Publish</button>
 							</li>
 						</ul>
 					</form>
@@ -212,7 +212,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="edit-assetoverlay">
+			<div id="edit-assetoverlay" onclick="editAssetOff()">
 				<div class="uploadAsset" id="editAssetForm">
 					<form class="update-image-form">
 						<ul class="flex-outer">
@@ -238,7 +238,7 @@
 								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
 							</li>
 							<li>
-							<button id="updateimageoverlaybutton" type="submit" onclick="editAssetOff()">Update</button>
+							<button id="updateimageoverlaybutton" type="submit">Update</button>
 							</li>
 						</ul>
 					</form>
@@ -246,7 +246,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="deleteoverlay">
+			<div id="deleteoverlay" onclick="deleteOff()">
 				<div class="delete" id="deleteForm">
 					<form class="delete-form">
 						<ul class="flex-outer">
@@ -255,7 +255,7 @@
 								<label for="delete-name" id="delete-name">This action can not be undone.</label>
 							</li>
 							<li>
-								<button id="delete-overlaybutton" type="submit" onclick="deleteOff()">Delete Forever</button>
+								<button id="delete-overlaybutton" type="submit">Delete Forever</button>
 							</li>
 						</ul>
 					</form>
