--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -54,7 +54,7 @@
 			</header>
 		</div>
 		<section role="region">
-			<div id="deleteoverlay">
+			<div id="deleteoverlay" onclick="deleteOff()">
 				<div class="delete" id="deleteForm">
 					<form class="delete-form">
 						<ul class="flex-outer">
@@ -63,7 +63,7 @@
 								<label for="delete-name" id="delete-name">This action can not be undone.</label>
 							</li>
 							<li>
-								<button id="delete-overlaybutton" type="submit" onclick="deleteOff()">Delete Forever</button>
+								<button id="delete-overlaybutton" type="submit">Delete Forever</button>
 							</li>
 						</ul>
 					</form>
@@ -71,7 +71,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="loginoverlay">
+			<div id="loginoverlay" onclick="loginOff()">
 				<div class="loginHere" id="loginForm">
 					<form class="login-form">
 						<ul class="flex-outer">
@@ -84,7 +84,7 @@
 								<input type="text" id="password2" placeholder="Enter password">
 							</li>
 							<li>
-								<button id="login" type="submit" onclick="loginOff()">Login</button>
+								<button id="login" type="submit">Login</button>
 							</li>
 						</ul>
 					</form>
@@ -92,13 +92,13 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="logoffoverlay">
+			<div id="logoffoverlay" onclick="logoffOff()">
 				<div class="logoff" id="logoffForm">
 					<form class="logoff-form">
 						<ul class="flex-outer">
 							<p class="form-title">Logoff</p>
 							<li>
-								<button id="logoff-overlaybutton" type="submit" onclick="logoffOff()">Logoff</button>
+								<button id="logoff-overlaybutton" type="submit">Logoff</button>
 							</li>
 						</ul>
 					</form>
@@ -106,7 +106,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="update-accountoverlay">
+			<div id="update-accountoverlay" onclick="updateAccountOff()">
 				<div class="updateAccount" id="updateAccountForm">
 					<form class="update-account-form">
 						<ul class="flex-outer">
@@ -128,7 +128,7 @@
 								<input type="text" class="email" id="updated-email" placeholder="Enter email here">
 							</li>
 							<li>
-								<button id="update-accountoverlaybutton" type="submit" onclick="updateAccountOff()">Update Account</button>
+								<button id="update-accountoverlaybutton" type="submit">Update Account</button>
 							</li>
 						</ul>
 					</form>
@@ -136,7 +136,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="accountoverlay">
+			<div id="accountoverlay" onclick="accountOff()">
 				<div class="addAccount" id="addAccountForm">
 					<form class="account-form">
 						<ul class="flex-outer">
@@ -163,7 +163,7 @@
 								<input type="text" class="email" id="account-email" placeholder="Enter email here">
 							</li>
 							<li>
-							<button id="accountoverlaybutton" type="submit" onclick="accountOff()">Create Account</button>
+							<button id="accountoverlaybutton" type="submit">Create Account</button>
 							</li>
 						</ul>
 					</form>
@@ -171,7 +171,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="childoverlay">
+			<div id="childoverlay" onclick="childOff()">
 				<div class="addChild" id="addChildForm">
 					<form class="child-age-form">
 						<ul class="flex-outer">
@@ -185,7 +185,7 @@
 							<input type="text" class="child-birth-date" id="birth-date" placeholder="mm/dd/yyyy">
 							</li>
 							<li>
-							<button id="childoverlaybutton" type="submit" onclick="childOff()">Create</button>
+							<button id="childoverlaybutton" type="submit">Create</button>
 							</li>
 						</ul>
 					</form>
@@ -193,7 +193,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="assetoverlay">
+			<div id="assetoverlay" onclick="assetOff()">
 				<div class="uploadAsset" id="connectAssetForm">
 					<form>
 						<ul class="flex-outer">
@@ -219,7 +219,7 @@
 								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
 							</li>
 							<li>
-							<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Publish</button>
+							<button id="assetoverlaybutton" type="submit">Publish</button>
 							</li>
 						</ul>
 					</form>
@@ -227,7 +227,7 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="draweroverlay">
+			<div id="draweroverlay" onclick="drawerOff()">
 				<div class="addDrawer" id="addDrawerForm">
 					<form class="drawer-age-form">
 						<ul class="flex-outer">
@@ -237,7 +237,7 @@
 							<input type="text" id="new-drawer-title" class="new-drawer-title" placeholder="Drawer Name">
 							</li>
 							<li>
-							<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
+							<button id="draweroverlaybutton" type="submit">Create</button>
 							</li>
 						</ul>
 					</form>
