updated forms to close on clicking an a, added a button with directions for website

--- a/public/assets.html
+++ b/public/assets.html
@@ -28,13 +28,13 @@
 					</div>
 			</div>
 			<div class="dropdown">
-				<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
+				<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-angle-down"></i></a>
 					<div class="dropdown-content child-dropbtn">
 						<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
 					</div>
 			</div>
 			<div class="dropdown">
-				<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
+				<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-angle-down"></i></a>
 					<div class="dropdown-content asset-dropbtn">
 						<a onclick="assetOn()" href="#"><i class="fas fa-link"></i> Connect Images</a>
 						<!-- <a onclick="drawerOn()" href="#"><i class="fas fa-plus"></i>  New Drawer</a> -->
@@ -56,8 +56,41 @@
 			</header>
 		</div>	
 		<section role="region">
-			<div id="loginoverlay" onclick="loginOff()">
+			<div id="deleteoverlay">
+				<div class="delete" id="deleteForm">
+					<button class ="close-form" type="submit" onclick="deleteOff()"><i class="fas fa-times"></i></button>
+					<form class="delete-form">
+						<ul class="flex-outer">
+							<p class="form-title">Are you sure?</p>
+							<li>
+								<label for="delete-name" id="delete-name">This action can not be undone.</label>
+							</li>
+							<li>
+								<button id="delete-overlaybutton" type="submit">Delete Forever</button>
+							</li>
+						</ul>
+					</form>
+				</div>
+			</div>
+		</section>
+		<section role="region">
+			<div id="logoffoverlay" onclick="logoffOff()">
+				<div class="logoff" id="logoffForm">
+					<button class ="close-form" type="submit" onclick="logoffOff()"><i class="fas fa-times"></i></button>
+					<form class="logoff-form">
+						<ul class="flex-outer">
+							<li>
+								<button id="logoff-overlaybutton" type="submit">Logoff</button>
+							</li>
+						</ul>
+					</form>
+				</div>
+			</div>
+		</section>
+		<section role="region">
+			<div id="loginoverlay">
 				<div class="loginHere" id="loginForm">
+					<button class ="close-form" type="submit" onclick="loginOff()"><i class="fas fa-times"></i></button>
 					<form class="login-form">
 						<ul class="flex-outer">
 							<p class="form-title">Login</p>
@@ -78,27 +111,9 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="logoffoverlay" onclick="logoffOff()">
-				<div class="logoff" id="logoffForm">
-					<form class="logoff-form">
-						<ul class="flex-outer">
-							<li>
-								<button id="logoff-overlaybutton" type="submit">Logoff</button>
-							</li>
-						</ul>
-					</form>
-				</div>
-			</div>
-		</section>
-		<section role="region">
-			<div id="update-accountoverlay" onclick="updateAccountOff()">
-				<div class="updateAccount" id="updateAccountForm">
-				</div>
-			</div>
-		</section>
-		<section role="region">
-			<div id="accountoverlay" onclick="accountOff()">
+			<div id="accountoverlay">
 				<div class="addAccount" id="addAccountForm">
+					<button class ="close-form" type="submit" onclick="accountOff()"><i class="fas fa-times"></i></button>
 					<form class="account-form">
 						<ul class="flex-outer">
 							<p class="form-title">Create New Account</p>
@@ -111,14 +126,13 @@
 								<input type="text" id="password" placeholder="min 10 characters, letters and numbers">
 							</li>
 							<li>
-							<li>
 								<label for="first-name">First Name</label>
 								<input type="text" id="first-name" placeholder="Enter first name here">
 							</li>
 							<li>
 								<label for="last-name">Last Name</label>
 								<input type="text" id="last-name" placeholder="Enter last name here">
-								</li>
+							</li>
 							<li>
 								<label for="account-email">email</label>
 								<input type="text" class="email" id="account-email" placeholder="Enter email here">
@@ -132,13 +146,20 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="childoverlay" onclick="childOff()">
+			<div id="update-accountoverlay">
+				<div class="updateAccount" id="updateAccountForm">
+				</div>
+			</div>
+		</section>
+		<section role="region">
+			<div id="childoverlay">
 				<div class="addChild" id="addChildForm">
+					<button class ="close-form" type="submit" onclick="childOff()"><i class="fas fa-times"></i></button>
 					<form class="child-age-form">
 						<ul class="flex-outer">
 							<p class="form-title">Add New Child</p>
 							<li>
-							<label for="first-name">First Name</label>
+							<label for="child-first-name">First Name</label>
 							<input type="text" id="child-first-name" placeholder="Enter child's first name here">
 							</li>
 							<li>
@@ -154,9 +175,10 @@
 			</div>
 		</section>
 		<section role="region">
-			<div id="assetoverlay" onclick="assetOff()">
+			<div id="assetoverlay">
 				<div class="uploadAsset" id="connectAssetForm">
-					<form class="connect-image-form">
+					<button class ="close-form" type="submit" onclick="assetOff()"><i class="fas fa-times"></i></button>
+					<form>
 						<ul class="flex-outer">
 							<p class="form-title">Connect File</p>
 							<li>
@@ -180,58 +202,7 @@
 								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
 							</li>
 							<li>
-							<button id="assetoverlaybutton" type="submit">Publish</button>
-							</li>
-						</ul>
-					</form>
-				</div>
-			</div>
-		</section>
-		<section role="region">
-			<div id="edit-assetoverlay" onclick="editAssetOff()">
-				<div class="uploadAsset" id="editAssetForm">
-					<form class="update-image-form">
-						<ul class="flex-outer">
-							<p class="form-title">Update Image Information</p>
-							<li>
-								<label for="title">Title</label>
-								<input type="text" id="title" placeholder="Title">
-							</li>
-							<li>
-								<label for="date-uploaded">Today's Date</label>
-								<input type="text" id="date-uploaded" placeholder="mm/dd/yyyy">
-							</li>
-							<li>
-								<label for="notes">Notes</label>
-								<input type="text" id="notes" placeholder="Notes">
-							</li>
-							<li>
-								<label for="drawer-title">Add To Drawer</label>
-								<input type="text" id="drawer-title" class="drawer-title" placeholder="Enter existing or new drawer name">
-							</li>
-							<li>
-								<label for="image-url">Image URL</label>
-								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
-							</li>
-							<li>
-							<button id="updateimageoverlaybutton" type="submit">Update</button>
-							</li>
-						</ul>
-					</form>
-				</div>
-			</div>
-		</section>
-		<section role="region">
-			<div id="deleteoverlay" onclick="deleteOff()">
-				<div class="delete" id="deleteForm">
-					<form class="delete-form">
-						<ul class="flex-outer">
-							<p class="form-title">Are you sure?</p>
-							<li>
-								<label for="delete-name" id="delete-name">This action can not be undone.</label>
-							</li>
-							<li>
-								<button id="delete-overlaybutton" type="submit">Delete Forever</button>
+								<button id="assetoverlaybutton" type="submit">Publish</button>
 							</li>
 						</ul>
 					</form>
