added demo creds to every page

--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -92,6 +92,8 @@
 					<form class="login-form">
 						<ul class="flex-outer">
 							<p class="form-title">Login</p>
+							<p class= "directions-item"><span class="directions-heading">Demo Account Credentials: </span><span style="text-decoration: underline">Username:</span> <span style="font-size: 14px"> DemoUser </span><span style="text-decoration: underline"> Password:</span> <span style="font-size: 14px"> test123456 </span></p>
+							<p class="form-title">Login</p>
 							<li>
 								<label for="login-user-name">Username</label>
 								<input type="text" id="login-user-name" placeholder="Enter username">
