updated styles and reconnected the connect image form

--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -178,7 +178,7 @@
 			<div id="assetoverlay">
 				<div class="uploadAsset" id="connectAssetForm">
 					<button class ="close-form" type="submit" onclick="assetOff()"><i class="fas fa-times"></i></button>
-					<form>
+					<form class="connect-image-form">
 						<ul class="flex-outer">
 							<p class="form-title">Connect File</p>
 							<li>
@@ -202,7 +202,7 @@
 								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
 							</li>
 							<li>
-							<button id="assetoverlaybutton" type="submit">Publish</button>
+							<button id="assetoverlaybutton" type="submit">Connect</button>
 							</li>
 						</ul>
 					</form>
