--- a/public/assets.html
+++ b/public/assets.html
@@ -179,7 +179,7 @@
 			<div id="assetoverlay" tabindex="-1" data-a11y-dialog-hide>
 				<div class="uploadAsset" id="connectAssetForm" role="dialog">
 					<button class ="close-form" type="submit" data-a11y-dialog-hide aria-label="Close this dialog window" onclick="assetOff()"><i class="fas fa-times"></i></button>
-					<form>
+					<form class="connect-image-form">
 						<ul class="flex-outer">
 							<p class="form-title">Connect File</p>
 							<li>
@@ -203,7 +203,7 @@
 								<input type="text" id="image-url" placeholder="http://imageurl.jpg">
 							</li>
 							<li>
-								<button id="assetoverlaybutton" type="submit">Publish</button>
+								<button id="assetoverlaybutton" type="submit">Connect</button>
 							</li>
 						</ul>
 					</form>
