added more direction text

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
 							 <li class= "directions-item">Visit the Child(ren) page, click on the child to see developmentally relevant web resources.</li>
 							 <p class="directions-heading">Organize Memories, School Work, Artwork into Drawers</p>
 							 <li class= "directions-item">Use the "Connect Image" form to bring the image into the website and place it into a drawer.</li>
+							 <li class= "directions-item">Think of drawers as topics and containers. They are simply an organization tool for your images.</li>
 							 <li class= "directions-item">Go to the Drawers page, click on the drawer button to view all the connected images.</li>
 							 <p class="form-title">Enjoy!</p>
 						</ul>
